fixed spacing on job details page

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -1992,3 +1992,7 @@ tr td button i {
 .show_input_button {
     width: 73px;
 }
+
+.JobDetails-status {
+    margin-bottom: 12px;
+}
